Change java memory settings from hardcoded in template to variables
Former-commit-id: ba6c3dedaf9f27d968feda327751505ea2ad27af