@@ -97,6 +97,7 @@ Attributes that configure and manage the installation of the Rundeck server
 * `node['rundeck']['port']` - Internal server port for the service, default '4440'
 * `node['rundeck']['email']` - Email address, default 'rundeck@hostdomain.com'
 * `node['rundeck']['restart_on_config_change']` - When true, rundeck will restart on any configuration file change. (even if a job is running) default 'false'
+* `node['rundeck']['jvm_mem']` - JVM memory arguments, default '-XX:MaxPermSize=256m -Xmx1024m -Xms256m'
 
 Attributes that configure SMTP settings for email notifications
 
